--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "productName": "TV weather",
   "version": "1.2.0",
   "description": "TV weather",
-  "main": "index.js",
+  "main": "./src/backend/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -17,7 +17,7 @@
   "build": {
     "win": {
       "target": "nsis",
-      "icon": "./icon.png"
+      "icon": "./img/icon/icon.png"
     },
     "nsis": {
       "oneClick": false,
