--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tvweather",
   "productName": "TV weather",
-  "version": "1.2.1",
+  "version": "1.3.0",
   "description": "TV weather",
   "main": "./src/backend/index.js",
   "scripts": {
@@ -18,6 +18,10 @@
     "win": {
       "target": "nsis",
       "icon": "./img/icon/icon.png"
+    },
+    "mac": {
+      "target": "dmg",
+      "icon": "./img/icon/icon_mac.png"
     },
     "nsis": {
       "oneClick": false,
